program list styles

--- a/spooky-oysters-react/src/index.css
+++ b/spooky-oysters-react/src/index.css
@@ -8,11 +8,11 @@ ul {
   list-style: none;
 }
 
-li:hover {
+/* li:hover {
   cursor: pointer;
   font-size: 1.15em;  
 }
 
 .Detail {
   font-size: .85em;
-}
+} */
